# TaskDB

./: LICENSE  README.md  env.example  pyproject.toml
data/: schema.sql
src/: __init__.py
src/migrations/: 001_add_task_status_column.py  002_add_date_and_time_columns.py
src/taskdb/: cli.py  commands.py  database.py
