[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TaskDB"
version = "0.1.1"
authors = [
  { name="Brittany Gates", email="bcgates82@gmail.com" },
]
description = "A CLI to-do list tracking tasks in a database."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
taskdb = "taskdb.cli:main"